[gd_scene load_steps=11 format=2]

[ext_resource path="res://player/player.tscn" type="PackedScene" id=1]
[ext_resource path="res://opponent/opponent.tscn" type="PackedScene" id=2]
[ext_resource path="res://ball/ball.tscn" type="PackedScene" id=3]
[ext_resource path="res://level/level.gd" type="Script" id=4]
[ext_resource path="res://assets/JetBrainsMono-Regular.ttf" type="DynamicFontData" id=5]

[sub_resource type="DynamicFont" id=1]
size = 40
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=2]
size = 40
font_data = ExtResource( 5 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 511.826, 7.96003 )

[sub_resource type="RectangleShape2D" id=4]

[sub_resource type="DynamicFont" id=5]
size = 200
font_data = ExtResource( 5 )

[node name="level" type="Node"]
script = ExtResource( 4 )

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.188235, 0.188235, 0.188235, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Half" type="ColorRect" parent="Background"]
margin_left = 509.0
margin_right = 515.0
margin_bottom = 600.0
color = Color( 0.25098, 0.25098, 0.25098, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AreaPlayer" type="ColorRect" parent="Background"]
margin_left = -200.0
margin_top = 100.0
margin_right = 200.0
margin_bottom = 500.0
color = Color( 0.25098, 0.25098, 0.25098, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Inner" type="ColorRect" parent="Background/AreaPlayer"]
margin_left = 6.0
margin_top = 6.0
margin_right = 394.0
margin_bottom = 394.0
color = Color( 0.188235, 0.188235, 0.188235, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AreaOpponent" type="ColorRect" parent="Background"]
margin_left = 824.0
margin_top = 100.0
margin_right = 1224.0
margin_bottom = 500.0
color = Color( 0.25098, 0.25098, 0.25098, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Inner" type="ColorRect" parent="Background/AreaOpponent"]
margin_left = 6.0
margin_top = 6.0
margin_right = 394.0
margin_bottom = 394.0
color = Color( 0.188235, 0.188235, 0.188235, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerScore" type="Label" parent="."]
margin_left = 400.0
margin_top = 10.0
margin_right = 440.0
margin_bottom = 31.0
custom_fonts/font = SubResource( 1 )
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OpponentScore" type="Label" parent="."]
margin_left = 600.0
margin_top = 10.0
margin_right = 664.0
margin_bottom = 31.0
custom_fonts/font = SubResource( 2 )
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TopWall" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="TopWall"]
position = Vector2( 512, -8 )
shape = SubResource( 3 )

[node name="BottomWall" type="StaticBody2D" parent="."]
position = Vector2( 0, 616 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="BottomWall"]
position = Vector2( 512, -8 )
shape = SubResource( 3 )

[node name="PlayerGoal" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerGoal"]
position = Vector2( -20, 300 )
scale = Vector2( 2, 30 )
shape = SubResource( 4 )

[node name="OpponentGoal" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="OpponentGoal"]
position = Vector2( 1044, 300 )
scale = Vector2( 2, 30 )
shape = SubResource( 4 )

[node name="Player" parent="." instance=ExtResource( 1 )]

[node name="Opponent" parent="." instance=ExtResource( 2 )]

[node name="Ball" parent="." instance=ExtResource( 3 )]

[node name="CountDownTimer" type="Timer" parent="."]
wait_time = 0.75
one_shot = true

[node name="CountDownLabel" type="Label" parent="."]
visible = false
margin_left = 452.0
margin_top = 180.0
margin_right = 572.0
margin_bottom = 428.0
custom_fonts/font = SubResource( 5 )
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="body_entered" from="PlayerGoal" to="." method="_on_PlayerGoal_body_entered"]
[connection signal="body_entered" from="OpponentGoal" to="." method="_on_OpponentGoal_body_entered"]
[connection signal="timeout" from="CountDownTimer" to="." method="_on_CountDownTimer_timeout"]
